--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,8 @@ packages = find:
 python_requires = >=3.11
 install_requires =
     paho-mqtt
+    distro
+    py-cpuinfo
 
 [options.extras_require]
 rpi =
