Migrating to the SCD41-Sensor while dumping the analog-input-based alternatives

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,9 +18,11 @@ install_requires =
     distro
     py-cpuinfo
 
+; TODO Remove deprecated (but later)
 [options.extras_require]
 rpi =
     sds011lib
+    adafruit-circuitpython-scd4x
     adafruit-circuitpython-ads1x15
     adafruit-blinka
 
