- Fixed MQTT issues / Changed subscription-submit system - Successful testing - Changed dummy values for more authenticity

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ install_requires =
     paho-mqtt
     distro
     py-cpuinfo
+    pyttsx3
 
 ; TODO Remove deprecated (but later)
 [options.extras_require]
